--- a/libs/test/test-listing/src/lib/test-listing.component.html
+++ b/libs/test/test-listing/src/lib/test-listing.component.html
@@ -165,7 +165,6 @@
                           <button [disabled]='(store.isActing$ | async)' [matMenuTriggerFor]='statusMenu'
                                   class='mr-3'
                                   color='{{filters.controls.published?.value ? "primary" : ""}}'
-                                  color='{{filters.controls.published?.value ? "primary" : ""}}'
                                   mat-icon-button>
                             <mat-icon style='font-size: 20px'>filter_list</mat-icon>
                           </button>
@@ -207,7 +206,9 @@
                           <mat-icon>create</mat-icon>
                           <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                         </button>
-                        <button (click)='store.toggleActive(row.id, row.isPublished)' mat-menu-item>
+                        <button
+                          *ngIf='isPublishable(row)'
+                          (click)='store.toggleActive(row.id, row.isPublished)' mat-menu-item>
                           <mat-icon>{{row.isPublished ? "block" : "check_circle_outline"}}</mat-icon>
                           <span>{{(row.isPublished ? constantDataService.BUTTON_NAME.UNPUBLISH : constantDataService.BUTTON_NAME.PUBLISH) | titlecase}}</span>
                         </button>
