--- a/libs/test-group/test-group-create/src/lib/test-group-create.component.html
+++ b/libs/test-group/test-group-create/src/lib/test-group-create.component.html
@@ -1,18 +1,18 @@
-<form class='p-4' [formGroup]='testGroup'>
+<form [formGroup]='testGroup' class='p-4'>
   <div class='container-fluid p-0'>
     <div class='row mb-4'>
       <div class='col-12 d-flex align-items-center justify-content-end'>
         <button
           [routerLink]='["/tests-group"]'
-          mat-stroked-button type='button'
-          class='ml-3'>
+          class='ml-3' mat-stroked-button
+          type='button'>
           Cancel
         </button>
         <button
           (click)='submit()'
-          mat-flat-button
           class='ml-3'
-          color='primary' type='submit'>
+          color='primary'
+          mat-flat-button type='submit'>
           Save
         </button>
       </div>
@@ -34,27 +34,27 @@
               <div class='row mb-2'>
                 <div class='col-12'>
                   <hidden-innovation-common-form-field
-                    label='Test Group Name'
                     controlPath='name'
+                    label='Test Group Name'
                   ></hidden-innovation-common-form-field>
                 </div>
               </div>
               <div class='row mb-2'>
                 <div class='col-12'>
-                  <mat-form-field class='w-100' appearance='fill'>
+                  <mat-form-field appearance='fill' class='w-100'>
                     <mat-label>Category</mat-label>
                     <mat-select formControlName='category'>
                       <mat-option [value]='"NONE"'>None</mat-option>
-                      <mat-option [value]=type
-                                  *ngFor='let type of testCatTypeIte'>{{type  | replaceUnderscore | titlecase}}</mat-option>
+                      <mat-option *ngFor='let type of testCatTypeIte'
+                                  [value]=type>{{type  | replaceUnderscore | titlecase}}</mat-option>
                     </mat-select>
                     <mat-error>
                       <ng-template
                         [ngIf]='((testGroup.controls.category.touch$ | async) || (testGroup.controls.category.dirty$ | async)) && (testGroup.controls.category.errors$ | async)'
                         let-error>
                         <hidden-innovation-form-field-errors
-                          label='Category'
                           [error]='error'
+                          label='Category'
                         ></hidden-innovation-form-field-errors>
                       </ng-template>
                     </mat-error>
@@ -65,11 +65,11 @@
               <div class='row mb-2'>
                 <div class='col-12'>
                   <hidden-innovation-common-form-field-tag-autocomplete
+                    [isDisabled]='!isCategoryValid'
+                    [tagCategory]='testGroup.controls.category.value'
                     controlPath='subCategory'
                     fieldType='INPUT'
                     label='Sub Category'
-                    [tagCategory]='testGroup.controls.category.value'
-                    [isDisabled]='!isCategoryValid'
                   ></hidden-innovation-common-form-field-tag-autocomplete>
                 </div>
               </div>
@@ -93,12 +93,12 @@
                 <div class='col-12'>
                   <p class='text-muted mb-2'>Thumbnail</p>
                   <hidden-innovation-common-form-field-image
-                    controlPath='thumbnailId'
-                    [setImageData]='selectedTestGroup?.thumbnail'
-                    [aspectRatio]='aspectRatio.STANDARD'
-                    [parentCtrl]='testGroup.controls.thumbnailId'
                     (emitImageCtrlData)='testGroup.controls.thumbnailId?.setValue($event)'
                     (emitRemoveImage)='testGroup.controls.thumbnailId?.reset($event)'
+                    [aspectRatio]='aspectRatio.STANDARD'
+                    [parentCtrl]='testGroup.controls.thumbnailId'
+                    [setImageData]='selectedTestGroup?.thumbnail'
+                    controlPath='thumbnailId'
                   ></hidden-innovation-common-form-field-image>
                 </div>
               </div>
@@ -106,12 +106,12 @@
                 <div class='col-12'>
                   <p class='text-muted mb-2'>Poster</p>
                   <hidden-innovation-common-form-field-image
-                    controlPath='imageId'
-                    [setImageData]='selectedTestGroup?.image'
-                    [aspectRatio]='aspectRatio.CUBE'
-                    [parentCtrl]='testGroup.controls.imageId'
                     (emitImageCtrlData)='testGroup.controls.imageId?.setValue($event)'
                     (emitRemoveImage)='testGroup.controls.imageId?.reset($event)'
+                    [aspectRatio]='aspectRatio.CUBE'
+                    [parentCtrl]='testGroup.controls.imageId'
+                    [setImageData]='selectedTestGroup?.image'
+                    controlPath='imageId'
                   ></hidden-innovation-common-form-field-image>
                 </div>
               </div>
@@ -125,9 +125,9 @@
             <h3 class='mat-h3 mb-0 font-sf-pro'>Test Options</h3>
           </mat-card-title>
           <mat-divider></mat-divider>
-          <mat-card-content>
-            <mat-card class='mat-elevation-z3 p-3 mb-3' [ngClass]='{"mt-4" : isFirst, "mb-0": isLast }'
-                      *ngFor='let test of (uiStore.selectedTests$ | async); first as isFirst; last as isLast; trackBy: trackByFn'>
+          <mat-card-content (cdkDropListDropped)='testGroupDragEvent($event)' cdkDropList>
+            <mat-card cdkDrag *ngFor='let test of (uiStore.selectedTests$ | async); first as isFirst; last as isLast; trackBy: trackByFn' [ngClass]='{"mt-4" : isFirst, "mb-0": isLast }'
+                      class='mat-elevation-z3 p-3 mb-3'>
               <div class='container-fluid p-0'>
                 <div class='row'>
                   <div class='col-10'>
@@ -136,11 +136,11 @@
                       class='mat-h5 text-color__primary--light mb-0 mr-4 font-calibri'>{{(test.category | titlecase) || '--'}}</h5>
                   </div>
                   <div class='col-2 d-flex justify-content-end'>
-                    <button type='button' mat-icon-button [matMenuTriggerFor]='testOption'>
+                    <button [matMenuTriggerFor]='testOption' mat-icon-button type='button'>
                       <mat-icon>more_vert</mat-icon>
                     </button>
                     <mat-menu #testOption='matMenu'>
-                      <button type='button' mat-menu-item (click)='deleteSelectedTestPrompt(test)'>
+                      <button (click)='deleteSelectedTestPrompt(test)' mat-menu-item type='button'>
                         <mat-icon>delete</mat-icon>
                         <span>Remove</span>
                       </button>
@@ -152,9 +152,9 @@
           </mat-card-content>
           <mat-card-actions>
             <button
-              [disabled]='!isCategoryValid'
               (click)='openTestSelector()'
-              color='accent' class='w-100' mat-flat-button
+              [disabled]='!isCategoryValid'
+              class='w-100' color='accent' mat-flat-button
               type='button'>
               <mat-icon class='mr-2 mb-1'>add</mat-icon>
               Add
