--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -219,8 +219,9 @@
             </mat-menu>
           </mat-card-title>
           <mat-divider></mat-divider>
-          <mat-card-content class='content-container'>
+          <mat-card-content class='content-container' (cdkDropListDropped)='packDragEvent($event)' cdkDropList>
             <hidden-innovation-pack-content-card
+              cdkDrag
               class='my-3'
               *ngFor='let content of (contentArrayCtrl.value$ | async); index as i; first as isFirst; last as isLast'
               [ngClass]='{"mt-3" : isFirst, "mb-0": isLast }'
