--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -53,23 +53,80 @@
             </div>
           </form>
           <div class='row mb-4'>
-            <div class='col-lg-6 col-md-12 mt-lg-0 mt-3'>
-              <hidden-innovation-line-chart
-                [chartData]='$any(store.registeredUsersData$ | async)'
-                [chartLabels]='$any(store.registeredUsersLabel$ | async)'
-                [isLoading]='(store.isLineChartLoading$ | async)'
-                chartOpt='No. of Registered users'
-                icon='how_to_reg'
-                label='Registered Users'></hidden-innovation-line-chart>
+            <div class='col-lg-12 col-md-12 mt-lg-0 mt-3 mb-5 d-flex'>
+              <div class='row w-100'>
+                <div class='col-lg-10'>
+                  <hidden-innovation-line-chart
+                    [chartData]='$any(store.registeredUsersData$ | async)'
+                    [chartLabels]='$any(store.registeredUsersLabel$ | async)'
+                    [isLoading]='(store.isLineChartLoading$ | async)'
+                    chartOpt='No. of Registered users'
+                    icon='how_to_reg'
+                    label='Registered Users'>
+                  </hidden-innovation-line-chart>
+                </div>
+
+                <div class='col-lg-2 p-0 d-flex flex-column justify-content-between'>
+                  <mat-card class='bg-light' >
+                    <mat-card-content class='text-center'>
+                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>16k</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+12.1%</h4>
+                    </mat-card-content>
+                  </mat-card>
+                  <mat-card class='bg-light' >
+                    <mat-card-content class='text-center'>
+                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #C49ED4'>5.8k</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+9.4%</h4>
+                    </mat-card-content>
+                  </mat-card>
+                  <mat-card class='bg-light' >
+                    <mat-card-content class='text-center'>
+                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>1.6k</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+16.4%</h4>
+                    </mat-card-content>
+                  </mat-card>
+                </div>
+              </div>
             </div>
-            <div class='col-lg-6 col-md-12 mt-lg-0 mt-3'>
-              <hidden-innovation-line-chart
-                [chartData]='$any(store.activeUserData$ | async)'
-                [chartLabels]='$any(store.activeUserLabel$ | async)'
-                [isLoading]='(store.isLineChartLoading$ | async)'
-                chartOpt='No. of Active users'
-                icon='sports_martial_arts'
-                label='Active Users'></hidden-innovation-line-chart>
+            <div class='col-lg-12 col-md-12 mt-lg-0 mt-3 mb-3'>
+              <div class='row w-100'>
+                <div class='col-lg-10'>
+                  <hidden-innovation-line-chart
+                    [chartData]='$any(store.activeUserData$ | async)'
+                    [chartLabels]='$any(store.activeUserLabel$ | async)'
+                    [isLoading]='(store.isLineChartLoading$ | async)'
+                    chartOpt='No. of Active users'
+                    icon='sports_martial_arts'
+                    label='Active Users'></hidden-innovation-line-chart>
+                </div>
+                <div class='col-lg-2 p-0 d-flex flex-column justify-content-between'>
+                  <mat-card class='bg-light' >
+                    <mat-card-content class='text-center'>
+                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>16k</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+12.1%</h4>
+                    </mat-card-content>
+                  </mat-card>
+                  <mat-card class='bg-light' >
+                    <mat-card-content class='text-center'>
+                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #C49ED4'>5.8k</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+9.4%</h4>
+                    </mat-card-content>
+                  </mat-card>
+                  <mat-card class='bg-light' >
+                    <mat-card-content class='text-center'>
+                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>1.6k</h1>
+                      <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+16.4%</h4>
+                    </mat-card-content>
+                  </mat-card>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
