fix(dashboard): graph description

--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -76,14 +76,14 @@
                   </mat-card>
                   <mat-card class='bg-light' >
                     <mat-card-content class='text-center'>
-                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
+                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Weekly</h3>
                       <h1 class='mb-2 mat-h1  font-calibri' style='color: #C49ED4'>5.8k</h1>
                       <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+9.4%</h4>
                     </mat-card-content>
                   </mat-card>
                   <mat-card class='bg-light' >
                     <mat-card-content class='text-center'>
-                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
+                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Daily</h3>
                       <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>1.6k</h1>
                       <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+16.4%</h4>
                     </mat-card-content>
@@ -112,14 +112,14 @@
                   </mat-card>
                   <mat-card class='bg-light' >
                     <mat-card-content class='text-center'>
-                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
+                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Weekly</h3>
                       <h1 class='mb-2 mat-h1  font-calibri' style='color: #C49ED4'>5.8k</h1>
                       <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+9.4%</h4>
                     </mat-card-content>
                   </mat-card>
                   <mat-card class='bg-light' >
                     <mat-card-content class='text-center'>
-                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
+                      <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Daily</h3>
                       <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>1.6k</h1>
                       <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+16.4%</h4>
                     </mat-card-content>
