--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -17,40 +17,40 @@
                                                       cardTitle='Total App Downloads'
                                                       icon='file_download'></hidden-innovation-dashboard-count-card>
             </div>
-            <div class='col-md-12 col-lg-4 mt-lg-0 mt-3'>
-              <mat-card class='bg-light h-100' style='padding: 10px 10px 0 10px'>
-                <div class='container-fluid p-0'>
-                  <div class='row'>
-                    <div class='col-12 '>
-                      <hidden-innovation-common-form-field-date
+<!--            <div class='col-md-12 col-lg-4 mt-lg-0 mt-3'>-->
+<!--              <mat-card class='bg-light h-100' style='padding: 10px 10px 0 10px'>-->
+<!--                <div class='container-fluid p-0'>-->
+<!--                  <div class='row'>-->
+<!--                    <div class='col-12 '>-->
+<!--                      <hidden-innovation-common-form-field-date-->
 
-                        [maxDate]='maxDate'
-                        endControlPath='end'
-                        startControlPath='start'></hidden-innovation-common-form-field-date>
-                      <!--                      <hidden-innovation-common-form-field-month-->
-                      <!--                        *ngIf='rangeFilterGroup.value.type === dashboardRangeFilterEnum.MONTHLY'-->
-                      <!--                        [maxDate]='maxDate'-->
-                      <!--                        controlPath='start'></hidden-innovation-common-form-field-month>-->
-                      <!--                      <hidden-innovation-common-form-field-week-->
-                      <!--                        *ngIf='rangeFilterGroup.value.type === dashboardRangeFilterEnum.WEEKLY'-->
-                      <!--                        [maxDate]='maxDate'-->
-                      <!--                        endControlPath='end'-->
-                      <!--                        startControlPath='start'></hidden-innovation-common-form-field-week>-->
-                    </div>
-                    <!--                    <div class='col-6'>-->
-                    <!--                      <mat-form-field class='w-100'>-->
-                    <!--                        <mat-label>Range Filter</mat-label>-->
-                    <!--                        <mat-select formControlName='type'>-->
-                    <!--                          <mat-option *ngFor='let op of dashboardRangeTypes'-->
-                    <!--                                      [value]='op'>{{op | titlecase}}-->
-                    <!--                          </mat-option>-->
-                    <!--                        </mat-select>-->
-                    <!--                      </mat-form-field>-->
-                    <!--                    </div>-->
-                  </div>
-                </div>
-              </mat-card>
-            </div>
+<!--                        [maxDate]='maxDate'-->
+<!--                        endControlPath='end'-->
+<!--                        startControlPath='start'></hidden-innovation-common-form-field-date>-->
+<!--                                            <hidden-innovation-common-form-field-month-->
+<!--                                              *ngIf='rangeFilterGroup.value.type === dashboardRangeFilterEnum.MONTHLY'-->
+<!--                                              [maxDate]='maxDate'-->
+<!--                                              controlPath='start'></hidden-innovation-common-form-field-month>-->
+<!--                                            <hidden-innovation-common-form-field-week-->
+<!--                                              *ngIf='rangeFilterGroup.value.type === dashboardRangeFilterEnum.WEEKLY'-->
+<!--                                              [maxDate]='maxDate'-->
+<!--                                              endControlPath='end'-->
+<!--                                              startControlPath='start'></hidden-innovation-common-form-field-week>-->
+<!--                    </div>-->
+<!--                                        <div class='col-6'>-->
+<!--                                          <mat-form-field class='w-100'>-->
+<!--                                            <mat-label>Range Filter</mat-label>-->
+<!--                                            <mat-select formControlName='type'>-->
+<!--                                              <mat-option *ngFor='let op of dashboardRangeTypes'-->
+<!--                                                          [value]='op'>{{op | titlecase}}-->
+<!--                                              </mat-option>-->
+<!--                                            </mat-select>-->
+<!--                                          </mat-form-field>-->
+<!--                                        </div>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--              </mat-card>-->
+<!--            </div>-->
           </form>
           <div class='row mb-4'>
             <div class='col-lg-12 col-md-12 mt-lg-0 mt-3 mb-5 d-flex'>
@@ -66,25 +66,25 @@
                   </hidden-innovation-line-chart>
                 </div>
 
-                <div class='col-lg-2 p-0 d-flex flex-column '>
-                  <mat-card class=' mb-5' mat-ripple (click)='showRegisteredUserData(dashboardRangeFilterEnum.MONTHLY)' >
-                    <mat-card-content class='text-center'>
+                <div class='col-lg-2 p-0 d-flex flex-column' >
+                  <mat-card class='mb-5'  (click)='showRegisteredUserData(dashboardRangeFilterEnum.MONTHLY)' >
+                    <mat-card-content  class='text-center'>
                       <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Monthly</h3>
-                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>16k</h1>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>{{registerUserData(dashboardRangeFilterEnum.MONTHLY)}}</h1>
                       <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+12.1%</h4>
                     </mat-card-content>
                   </mat-card>
                   <mat-card class=' mb-5' mat-ripple (click)='showRegisteredUserData(dashboardRangeFilterEnum.WEEKLY)'>
                     <mat-card-content class='text-center'>
                       <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Weekly</h3>
-                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #C49ED4'>5.8k</h1>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #C49ED4'>{{registerUserData(dashboardRangeFilterEnum.WEEKLY)}}</h1>
                       <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+9.4%</h4>
                     </mat-card-content>
                   </mat-card>
                   <mat-card class=' mb-5' mat-ripple (click)='showRegisteredUserData(dashboardRangeFilterEnum.DAILY)'>
                     <mat-card-content class='text-center'>
                       <h3 class='m-0 mb-2 mat-h3 text-color__primary font-calibri'>Daily</h3>
-                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>1.6k</h1>
+                      <h1 class='mb-2 mat-h1  font-calibri' style='color: #8CB4EA'>{{registerUserData(dashboardRangeFilterEnum.DAILY)}}</h1>
                       <h4 class='mb-2 mat-h4 text-color__success font-calibri'>+16.4%</h4>
                     </mat-card-content>
                   </mat-card>
